# Rock-Paper-Scissors

./: .gitignore  README.md  pyproject.toml
ai/notebooks/: README.md  data_split.ipynb
ai/notebooks/comparison/: model_comparison.py  rps_model_comparison.ipynb
ai/notebooks/from_scratch/: dl-v1.ipynb
ai/notebooks/mobilenet/: dl-v3-Transfer_learning+fine_tuning.ipynb  dl_load_model.ipynb
ai/notebooks/yolo/: dl-v1.ipynb  dl_load_model.ipynb  person_tracking.ipynb
api/: main.py  requirements.txt
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
notebooks/: dl-v1.ipynb
notebooks/from_scratch/: dl-v1.ipynb
notebooks/yolo/: dl-v1.ipynb
notebooks/yolo/runs/classify/train/: args.yaml  results.csv
notebooks/yolo/runs/classify/train/weights/: best.pt  last.pt
