[project]
name = "dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "fastapi>=0.100.0",
    "ipykernel>=7.2.0",
    "keras>=3.14.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "tensorflow>=2.21.0",
    "ultralytics>=8.4.46",
    "uvicorn[standard]>=0.23.0",
]
